# anycms-i18n

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  cliff.toml  justfile  release.toml
.claude/skills/rust-api-http/: SKILL.md
.claude/skills/rust-to-ts/: SKILL.md
.github/workflows/: ci.yml
.rules/dev/: entity.md  web.md
crates/anycms-i18n/: Cargo.toml
crates/anycms-i18n-actix/: Cargo.toml
crates/anycms-i18n-actix/examples/: actix_server.rs
crates/anycms-i18n-actix/src/: lib.rs
crates/anycms-i18n-axum/: Cargo.toml
crates/anycms-i18n-axum/examples/: axum_server.rs
crates/anycms-i18n-axum/src/: lib.rs
crates/anycms-i18n-macro/: CHANGELOG.md  Cargo.toml
crates/anycms-i18n-macro/src/: lib.rs
crates/anycms-i18n-sqlx/: Cargo.toml
crates/anycms-i18n-sqlx/examples/: postgres.rs  sqlite.rs
crates/anycms-i18n-sqlx/migrations/: 001_init.sql
crates/anycms-i18n-sqlx/src/: lib.rs
crates/anycms-i18n/examples/: basic.rs  builder.rs  builder_embed_locales.rs  fallback.rs  hot_reload.rs  i18n_allow_override.rs  json_basic.rs  mixed_formats.rs  plural.rs  runtime_override.rs  yaml_basic.rs
crates/anycms-i18n/src/: backend.rs  builder.rs  core.rs  error.rs  flat_backend.rs  hot_reload.rs  interpolate.rs  json_backend.rs  lib.rs  locale.rs  macros.rs  plural.rs  yaml_backend.rs
docs/design/: anycms-i18n-design.md
docs/prd/: anycms-i18n.md
locales/: en.json  en.toml  en.yaml  ja.json  ja.toml  ja.yaml  zh-CN.json  zh-CN.toml  zh-CN.yaml
