[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.3"
license = "MIT"
homepage = "https://anycms.org"
edition = "2024"
repository = "https://github.com/anycms/anycms-i18n"
documentation = "https://docs.rs/anycms-i18n"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
dashmap = "6"
parking_lot = "0.12"

# Internal crates
anycms-i18n = { version = "0.2.3", path = "crates/anycms-i18n"}
anycms-i18n-macro = { version = "0.2.3", path = "crates/anycms-i18n-macro" }
anycms-i18n-sqlx = { version = "0.2.3", path = "crates/anycms-i18n-sqlx" }

# Optional - Actix
actix-web = "4"

# Optional - Axum
axum = "0.8"
tower = "0.5"
futures = "0.3"
