[package]
name = "anycms-i18n-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for anycms-i18n"
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
