[package]
name = "anycms-i18n"
version.workspace = true
edition.workspace = true
description = "Internationalization support for the anycms-rs ecosystem"
license.workspace = true
homepage.workspace = true

[features]
default = ["toml-backend", "init", "task-local"]

# Backend implementations
toml-backend = ["dep:toml"]
json-backend = []
yaml-backend = ["dep:serde_yaml"]
all-backends = ["toml-backend", "json-backend", "yaml-backend"]

# i18n!() init macro
init = ["dep:anycms-i18n-macro"]

# Runtime file loading (non-embedded)
fs-loader = []

# Hot reload
hot-reload = ["fs-loader", "dep:notify"]

# Task-local locale (for async frameworks — t!() auto-detects request locale)
task-local = ["dep:tokio"]

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Optional - TOML backend
toml = { workspace = true, optional = true }

# Optional - YAML backend
serde_yaml = { version = "0.9", optional = true }

# Optional - i18n!() macro
anycms-i18n-macro = { workspace = true, optional = true }

# Optional - Hot reload
notify = { version = "7", optional = true }

# Optional - Task-local locale for async frameworks
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "builder"
path = "examples/builder.rs"

[[example]]
name = "fallback"
path = "examples/fallback.rs"

[[example]]
name = "plural"
path = "examples/plural.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"
required-features = ["hot-reload"]

[[example]]
name = "json_basic"
path = "examples/json_basic.rs"
required-features = ["json-backend", "init"]

[[example]]
name = "yaml_basic"
path = "examples/yaml_basic.rs"
required-features = ["yaml-backend", "init"]

[[example]]
name = "mixed_formats"
path = "examples/mixed_formats.rs"
required-features = ["all-backends", "init"]
